Corrected text box alignment bug

--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ footer p {
       flex-direction: row;
       align-items: flex-start;
       border-color: #fff;
+      flex-wrap: wrap;
     }
 
 
